# Starry-On-ArceOS

./: .gitignore  Cargo.toml  Makefile  build_img.sh
apps/libc/: Makefile
apps/riscv-syscall-testcases/riscv64/: testcase_list
scripts/: get_deps.sh
src/: loader.rs  main.rs  mm.rs  task.rs
src/syscall_imp/: mod.rs
src/syscall_imp/fs/: io.rs
src/syscall_imp/mm/: mmap.rs
src/syscall_imp/task/: schedule.rs  thread.rs
starry/config/: constant.KERNEL_STACK_SIZE.html  constant.USER_SPACE_BASE.html  constant.USER_SPACE_SIZE.html  constant.USER_STACK_SIZE.html  constant.USER_STACK_TOP.html
