[package]
name = "starry"
version = "0.1.0"
edition = "2021"
authors = ["Azure-stars <Azure_stars@126.com>", "Yuekai Jia <equation618@gmail.com>"]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/starry-next"

[dependencies]
log = "0.4"
linkme = "0.3"
axerrno = "0.1"
memory_addr = "0.3"
xmas-elf = "0.9"
crate_interface = "0.1"
bitflags = "2.6"
kernel-elf-parser = "0.1.0"
num_enum = { version = "0.7", default-features = false }
syscalls = { version = "0.6", default-features = false }

axstd = { path = ".arceos/ulib/axstd", features = ["alloc", "paging", "multitask", "sched_cfs", "fs"] }
axhal = { path = ".arceos/modules/axhal", features = ["uspace"] }
axmm = { path = ".arceos/modules/axmm" }
axtask = { path = ".arceos/modules/axtask" }
axsync = { path = ".arceos/modules/axsync" }
axfs = { path = ".arceos/modules/axfs" }
axruntime = { path = ".arceos/modules/axruntime", features = ["multitask"] }
arceos_posix_api = { path = ".arceos/api/arceos_posix_api", features = ["fs", "multitask"] }
axns = { path = ".arceos/modules/axns", features = ["thread-local"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"

[build-dependencies]
toml_edit = "0.22"
